# g15tools

libg15render/: Makefile.am
libg15render/src/: g15fontconvert.c
